@startuml
'https://plantuml.com/class-diagram
!include Style.puml
hide empty members

class CliverShelf
class SalesManager
class SellCommand
class ReportCommand
class MarkUpCommand
class SalesReport

CliverShelf -- ReportCommand : executes >
CliverShelf -- SellCommand : executes >
CliverShelf -- MarkUpCommand : executes >

ReportCommand --> SalesReport
SalesReport --> SalesManager
MarkUpCommand --> SalesMarkUp
SellCommand --> SalesManager

@enduml